--- a/Praktika_31_10/MainWindow.xaml
+++ b/Praktika_31_10/MainWindow.xaml
@@ -1,6 +1,7 @@
 ﻿<Window x:Class="Praktika_31_10.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:syncfusion="http://schemas.syncfusion.com/wpf"    
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Praktika_31_10"
@@ -8,6 +9,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800" Activated="Window_Activated" Deactivated="Window_Deactivated">
     <Grid>
+
         <Grid.RowDefinitions>
             <RowDefinition Height="50"/>
             <RowDefinition/>
@@ -23,20 +25,20 @@
         <Border Height="40" Width="1" Background="Black" HorizontalAlignment="Right" Grid.Column="0" Grid.Row="0"/>
         <StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="1">
             <TextBlock Text="c" VerticalAlignment="Center" Margin="5,0,0,0"/>
-            <DatePicker Height="30" Width="100" Margin="4,0,0,0"/>
+            <DatePicker x:Name="datepicker1" Height="30" Width="100" Margin="4,0,0,0" SelectedDateChanged="DatePicker_SelectedDateChanged"/>
             <TextBlock Text="по" VerticalAlignment="Center" Margin="5,0,0,0"/>
-            <DatePicker Height="30" Width="100" Margin="4,0,0,0"/>
+            <DatePicker x:Name="datepicker2" Height="30" Width="100" Margin="4,0,0,0"/>
         </StackPanel>
 
         <StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="2" HorizontalAlignment="Center">
             <TextBlock Text="Категория" VerticalAlignment="Center" Margin="0,0,10,0"/>
-            <ComboBox x:Name="categoryCombo" Height="30" Width="90" Margin="4,0,0,0" DisplayMemberPath="category_name"/>
+            <ComboBox x:Name="categoryCombo" Height="30" Width="90" Margin="4,0,0,0" DisplayMemberPath="category_name" SelectionChanged="categoryCombo_SelectionChanged"/>
         </StackPanel>
 
         <StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="3" HorizontalAlignment="Center">
             <Button Content="Выбрать" Height="30" Width="90" Margin="0,0,5,0"/>
             <Button Content="Очистить" Height="30" Width="90" Margin="0,0,5,0"/>
-            <Button Content="Отчет" Height="30" Width="90"/>
+            <Button x:Name="reportBtn" Content="Отчет" Height="30" Width="90" Click="reportBtn_Click_1"/>
         </StackPanel>
 
         <DataGrid x:Name="dataGrid" Grid.Row="1" Grid.ColumnSpan="4" AutoGenerateColumns="False">
